--- a/css/reset.css
+++ b/css/reset.css
@@ -14,6 +14,7 @@
 }
 
 html {
+  overflow-x: clip;
   scroll-behavior: smooth;
   text-size-adjust: 100%;
 }
@@ -22,6 +23,7 @@ body {
   -webkit-font-smoothing: antialiased;
   line-height: 1.5;
   min-block-size: 100vh;
+  overflow-x: clip;
 }
 
 img,
